--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 <h1>ホーム画面（仮）</h1>
+<div th:if="${#authentication == null or !#authorization.expression('isAuthenticated()')}">
+    <a th:href="@{/login}" class="btn btn-primary me-2">ログイン</a>
+</div>
+<form th:action="@{/logout}" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+    <button type="submit" class="btn btn-outline-danger">ログアウト</button>
+</form>
 <!-- webjar -->
 <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
 <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
