--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <!-- Bootstrap CSS -->
     <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
-    <title>ホーム画面（仮）</title>
+    <title>サイト管理者画面画面（仮）</title>
 </head>
 <body>
-<h1>ホーム画面（仮）</h1>
-<a th:href="@{/admin}">サイト管理者画面</a>
+<h1>サイト管理者画面（仮）</h1>
+<a th:href="@{/admin/user-list}">ユーザー一覧</a>
+<a th:href="@{/admin/restaurant-list}">店舗一覧</a>
+<a th:href="@{/}">戻る</a>
 <!-- webjar -->
 <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
 <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
