--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -113,6 +113,7 @@
     </ul>
 </div>
 
+<!-- webjar -->
 <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
 <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </body>
