ユーザー一覧、停止・有効機能追加

--- a/src/main/resources/templates/admin/restaurant/edit.html
+++ b/src/main/resources/templates/admin/restaurant/edit.html
@@ -87,7 +87,7 @@
         <p>
             <label>定休日</label>
             <span th:text="${errorMessage}"></span>
-            <input type="checkbox" name="regularHoliday" value="1" th:checked="${}">月曜日
+            <input type="checkbox" name="regularHoliday" value="1">月曜日
             <input type="checkbox" name="regularHoliday" value="2">火曜日
             <input type="checkbox" name="regularHoliday" value="3">水曜日
             <input type="checkbox" name="regularHoliday" value="4">木曜日
