--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <!-- Bootstrap CSS -->
     <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
-    <title>新規会員登録</title>
+    <title>会員情報編集</title>
 </head>
 <body>
 
-<h1>新規会員登録</h1>
+<h1>会員情報編集</h1>
 
-<!-- 新規会員登録フォーム -->
-<form th:action="@{/user/add}" method="post" th:object="${userForm}">
+<!-- 会員情報編集フォーム -->
+<form th:action="@{'/user/update/' + ${userForm.id}}" method="post" th:object="${userForm}">
     <div>
         <p>
-            <div th:if="${accountError != null}" th:text="${accountError}"></div>
+            <div th:if="${#fields.hasErrors('account')}" th:errors="*{account}"></div>
             <div th:if="${accountError != null}" th:text="${accountError}"></div>
             <label for="account">アカウント：</label><br>
             <input type="text" id="account" th:field="*{account}">
@@ -25,7 +25,6 @@
             <input type="password" id="password" th:field="*{password}">
         </p>
         <p>
-            <div th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></div>
             <label for="confirmPassword">パスワード（確認用）：</label><br>
             <input type="password" id="confirmPassword" th:field="*{confirmPassword}">
         </p>
@@ -35,7 +34,7 @@
             <input type="text" id="name" th:field="*{name}">
         </p>
         <p>
-            <button type="submit">登録</button>
+            <button type="submit">更新</button>
         </p>
     </div>
 </form>
