--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
     <title>ホーム</title>
 </head>
 <body>
+<!-- 共通メニューバーの読み込み -->
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <h1>ホーム</h1>
 
