--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -7,6 +7,9 @@
     <title>検索結果</title>
 </head>
 <body>
+<!-- 共通メニューバーの読み込み -->
+<div th:replace="fragments/navbar :: navbar"></div>
+
 
 <h1>検索結果</h1>
 
