新規会員登録リンク

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,6 +40,11 @@
         </form>
     </div>
 
+    <p>
+        新規会員登録は
+        <a th:href="@{/user/new}">こちら</a>
+    </p>
+
     <!-- パスワード表示切替 -->
     <script>
         function passwordVisibility() {
