店舗詳細画面の定休日表示を実装

--- a/src/main/resources/templates/restaurant-detail.html
+++ b/src/main/resources/templates/restaurant-detail.html
@@ -32,7 +32,7 @@
             </tr>
             <tr>
                 <th>定休日</th>
-                <!--<td th:text="${restaurant.　}">定休日</td>-->
+                <td th:text="${#lists.isEmpty(holidayNames) ? 'なし' : #strings.arrayJoin(holidayNames, '・')}">定休日</td>
             </tr>
             <tr>
                 <th>説明</th>
