--- a/src/main/resources/templates/admin/restaurant/index.html
+++ b/src/main/resources/templates/admin/restaurant/index.html
@@ -9,22 +9,27 @@
     <title>店舗一覧画面</title>
 </head>
 <body>
-<h2>店舗一覧</h2>
-<a th:href="@{/admin/restaurant/new}">店舗登録</a>
-<div th:each="restaurant : ${restaurants}">
-    <div th:text="${restaurant.name}"></div>
-    <details>
-        <summary>店舗詳細を見る</summary>
-        <span th:text="'電話番号：' + ${restaurant.telephone}"></span>
-        <span th:text="'住所：' + ${restaurant.address}"></span>
-        <span th:text="'エリア：' + ${restaurant.area}"></span>
-        <span th:text="'ジャンル：' + ${restaurant.genre}"></span>
-        <span th:text="'説明：' + ${restaurant.explanation}"></span>
-        <span th:text="'営業時間：' + ${restaurant.startBusiness} + '~' + ${restaurant.endBusiness}"></span>
-        <span th:text="'定員：' + ${restaurant.capacity}"></span>
-        <span th:text="'予算：' + ${restaurant.minAmount} + '~' + ${restaurant.maxAmount}"></span>
-        定休日：
-        <span th:each="regularHoliday : ${regularHolidays}">
+<header>
+    <div th:replace="fragments/navbar :: navbar"></div>
+</header>
+<main>
+    <h2>店舗一覧</h2>
+
+    <a th:href="@{/admin/restaurant/new}">店舗登録</a>
+    <div th:each="restaurant : ${restaurants}">
+        <div th:text="${restaurant.name}"></div>
+        <details>
+            <summary>店舗詳細を見る</summary>
+            <span th:text="'電話番号：' + ${restaurant.telephone}"></span>
+            <span th:text="'住所：' + ${restaurant.address}"></span>
+            <span th:text="'エリア：' + ${restaurant.area}"></span>
+            <span th:text="'ジャンル：' + ${restaurant.genre}"></span>
+            <span th:text="'説明：' + ${restaurant.explanation}"></span>
+            <span th:text="'営業時間：' + ${restaurant.startBusiness} + '~' + ${restaurant.endBusiness}"></span>
+            <span th:text="'定員：' + ${restaurant.capacity}"></span>
+            <span th:text="'予算：' + ${restaurant.minAmount} + '~' + ${restaurant.maxAmount}"></span>
+            定休日：
+            <span th:each="regularHoliday : ${regularHolidays}">
             <th:block th:if="${restaurant.id == regularHoliday.restaurantId}" th:switch="${regularHoliday.regularHoliday}">
                 <span th:case=1 th:text="月曜日"></span>
                 <span th:case=2 th:text="火曜日"></span>
@@ -35,15 +40,17 @@
                 <span th:case=7 th:text="日曜日"></span>
             </th:block>
         </span>
-        <a th:href="@{/admin/restaurant/edit/{id}(id=${restaurant.id})}">編集</a>
-        <form th:action="@{/admin/restaurant/delete/{id}(id=${restaurant.id})}" th:method="delete" onSubmit="return CheckDelete()">
-            <!-- CSRFトークン -->
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <input type="submit" value="削除">
-        </form>
-    </details>
-</div>
-<a th:href="@{/}">戻る</a>
+            <a th:href="@{/admin/restaurant/edit/{id}(id=${restaurant.id})}">編集</a>
+            <form th:action="@{/admin/restaurant/delete/{id}(id=${restaurant.id})}" th:method="delete" onSubmit="return CheckDelete()">
+                <!-- CSRFトークン -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <input type="submit" value="削除">
+            </form>
+        </details>
+    </div>
+    <a th:href="@{/admin}">戻る</a>
+</main>
+
 <!-- webjar -->
 <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
 <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
