--- a/src/main/resources/templates/reservation/new.html
+++ b/src/main/resources/templates/reservation/new.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <!-- Bootstrap CSS -->
-    <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
-    <script th:src="@{/js/main.js}"></script>
+    <div th:replace="fragments/fragment :: head"></div>
     <title>予約画面</title>
 </head>
 <body>
+    <header>
+        <div th:replace="fragments/navbar :: navbar"></div>
+    </header>
     <main>
         <h2 th:text="${restaurant.name + ' の予約'}"></h2>
         <div th:text="${'営業時間(L.Oは営業終了30分前)：' + restaurant.startBusiness + '~' + restaurant.endBusiness}"></div>
@@ -41,6 +41,7 @@
                         th:field="*{reservationTime}"
                         th:attr="data-start=${restaurant.startBusiness}, data-end=${restaurant.endBusiness}">
                 </select>
+                <input type="hidden" id="currentTime" th:value="*{reservationTime}">
             </p>
             <p>
                 <label>予約人数</label>
@@ -51,10 +52,9 @@
                 <input type="submit" value="登録確定">
             </p>
         </form>
+        <a th:href="@{/restaurant/{id}(id=${restaurant.id})}">戻る</a>
     </main>
 
-<!-- webjar -->
-<script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+    <div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
