--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,14 +7,15 @@ body {
 
 /* 左メニュー（固定サイドバー） */
 .sidebar {
-    height: 100vh; /* 全高 */
+    height: 100vh;
     width: 230px;
     position: fixed;
-    top: 0;
+    top: 60px;
     left: 0;
     background-color: #2c3e50;
     color: #ecf0f1;
     padding-top: 20px;
+    z-index: 1000;
 }
 
 .sidebar a {
@@ -37,6 +38,6 @@ body {
 
 /* 右メインエリア */
 .content {
-    margin-left: 230px; /* サイドバーの幅分ずらす */
+    margin-left: 230px;
     padding: 30px;
 }
