--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ja" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <!-- Bootstrap CSS -->
-    <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
+    <div th:replace="fragments/fragment :: head"></div>
     <title>サイト管理者画面</title>
 </head>
 <body>
@@ -60,8 +58,6 @@
     </div>
 
 </main>
-<!-- webjar -->
-<script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
