--- a/src/main/resources/templates/restaurant-detail.html
+++ b/src/main/resources/templates/restaurant-detail.html
@@ -13,15 +13,12 @@
 <h1>店舗詳細</h1>
 
 <!-- 店舗紹介 -->
-<div>
     <section>
         <h2 th:text="${restaurant.name}">店舗名</h2>
 
-        <div>
-            <img img th:src="${restaurant.mainImage} != null ? @{'/storage/' + ${restaurant.mainImage}} : @{/storage/noimage.jpg}"
+        <img img th:src="${restaurant.mainImage} != null ? @{'/storage/restaurant/' + ${restaurant.mainImage}} : @{/storage/noimage.jpg}"
                  class="w-100"
                  alt="店舗画像">
-        </div>
 
         <table>
             <tr>
