--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -15,8 +15,8 @@
 
 <!-- webjarのフラグメント化 -->
 <div th:fragment="scriptsAndJs" th:remove="tag">
-    <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-    <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </div>
 </body>
 </html>
