予約履歴微調整

--- a/src/main/resources/templates/reservation/history.html
+++ b/src/main/resources/templates/reservation/history.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
 
-    <a th:href="@{/history}">📜 過去の予約履歴</a>
+    <a th:href="@{/mypage}">🔍 マイページTOP</a>
 </div>
 
 <!--右側メインエリア -->
