--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" th:href="@{/login}">ログイン</a>
                 </li>
                 <li class="nav-item" th:if="${!#authorization.expression('isAuthenticated()')}">
-                    <a class="nav-link" th:href="@{/signup}">新規会員登録</a>
+                    <a class="nav-link" th:href="@{/user/new}">新規会員登録</a>
                 </li>
 
                 <!-- ログイン中 -->
