--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- fragments/navbar.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light nya-navbar" th:fragment="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">ホーム</a>
 
