--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,4 @@
+
 /* マイページ画面　*/
 body {
     background-color: #f8f9fa;
@@ -40,4 +41,23 @@ body {
 .content {
     margin-left: 230px;
     padding: 30px;
+}
+
+/* サイト管理者画面 */
+.admin-sidebar {
+     height: 100vh;
+     width: 230px;
+     position: fixed;
+     top: 120px;
+     left: 0;
+     background-color: #2c3e50;
+     color: #ecf0f1;
+     padding-top: 20px;
+     z-index: 1000;
+}
+
+.list-group-item {
+    background-color: #2c3e50;
+    color: #fff;
+    border: none;
 }
