--- a/src/main/resources/templates/admin/restaurant/new.html
+++ b/src/main/resources/templates/admin/restaurant/new.html
@@ -7,6 +7,15 @@
 <body>
 <header>
     <div th:replace="fragments/navbar :: navbar"></div>
+    <!--パンくずリスト-->
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb p-3 bg-light rounded-2">
+            <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
+            <li class="breadcrumb-item"><a th:href="@{/admin}">サイト管理者画面</a></li>
+            <li class="breadcrumb-item"><a th:href="@{/admin/restaurant-list}">店舗一覧</a></li>
+            <li class="breadcrumb-item active" aria-current="page">店舗登録</li>
+        </ol>
+    </nav>
 </header>
 <main>
 
