--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -7,144 +7,156 @@
     <title>検索結果</title>
 </head>
 <body>
-<!-- 共通メニューバーの読み込み -->
-<div th:replace="fragments/navbar :: navbar"></div>
+<header>
+    <!-- 共通メニューバーの読み込み -->
+    <div th:replace="fragments/navbar :: navbar"></div>
 
-<div th:if="${errorMessage != null}" th:text="${errorMessage}"></div>
+    <!--パンくずリスト-->
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb p-3 bg-light rounded-2">
+            <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
+            <li class="breadcrumb-item active" aria-current="page">検索結果</li>
+        </ol>
+    </nav>
+</header>
 
-<h1>検索結果</h1>
+<main>
+    <div th:if="${errorMessage != null}" th:text="${errorMessage}"></div>
 
-<!-- 検索条件の表示 -->
-<h2>検索条件</h2>
+    <h1>検索結果</h1>
 
-<!-- 検索フォーム -->
-<div>
-    <form th:action="@{/search}" method="get">
+    <!-- 検索条件の表示 -->
+    <h2>検索条件</h2>
 
-        <label for="area">エリア：</label>
-        <select name="area" id="area" th:value="${searchForm.area}">
-            <option value=""></option>
-            <option value="東京" th:selected="${searchForm.area == '東京'}">東京</option>
-            <option value="神奈川" th:selected="${searchForm.area == '神奈川'}">神奈川</option>
-            <option value="愛知" th:selected="${searchForm.area == '愛知'}">愛知</option>
-            <option value="大阪" th:selected="${searchForm.area == '大阪'}">大阪</option>
-            <option value="京都" th:selected="${searchForm.area == '京都'}">京都</option>
-            <option value="福岡" th:selected="${searchForm.area == '福岡'}">福岡</option>
-        </select>
+    <!-- 検索フォーム -->
+    <div>
+        <form th:action="@{/search}" method="get">
 
-        <label for="genre">ジャンル：</label>
-        <select name="genre" id="genre" th:value="${searchForm.genre}">
-            <option value=""></option>
-            <option value="焼肉" th:selected="${searchForm.genre == '焼肉'}">焼肉</option>
-            <option value="寿司" th:selected="${searchForm.genre == '寿司'}">寿司</option>
-            <option value="居酒屋" th:selected="${searchForm.genre == '居酒屋'}">居酒屋</option>
-            <option value="イタリアン" th:selected="${searchForm.genre == 'イタリアン'}">イタリアン</option>
-            <option value="ラーメン" th:selected="${searchForm.genre == 'ラーメン'}">ラーメン</option>
-            <option value="カフェ" th:selected="${searchForm.genre == 'カフェ'}">カフェ</option>
-        </select>
+            <label for="area">エリア：</label>
+            <select name="area" id="area" th:value="${searchForm.area}">
+                <option value=""></option>
+                <option value="東京" th:selected="${searchForm.area == '東京'}">東京</option>
+                <option value="神奈川" th:selected="${searchForm.area == '神奈川'}">神奈川</option>
+                <option value="愛知" th:selected="${searchForm.area == '愛知'}">愛知</option>
+                <option value="大阪" th:selected="${searchForm.area == '大阪'}">大阪</option>
+                <option value="京都" th:selected="${searchForm.area == '京都'}">京都</option>
+                <option value="福岡" th:selected="${searchForm.area == '福岡'}">福岡</option>
+            </select>
 
-        <label for="headcount">人数：</label>
-        <select name="headcount" id="headcount" th:value="${searchForm.headcount}">
-            <option value=""></option>
-            <option th:each="i : ${#numbers.sequence(1, 99)}"
-                    th:value="${i}"
-                    th:text="${i} + '名'"
-                    th:selected="${searchForm.headcount == i}">
-            </option>
-        </select>
+            <label for="genre">ジャンル：</label>
+            <select name="genre" id="genre" th:value="${searchForm.genre}">
+                <option value=""></option>
+                <option value="焼肉" th:selected="${searchForm.genre == '焼肉'}">焼肉</option>
+                <option value="寿司" th:selected="${searchForm.genre == '寿司'}">寿司</option>
+                <option value="居酒屋" th:selected="${searchForm.genre == '居酒屋'}">居酒屋</option>
+                <option value="イタリアン" th:selected="${searchForm.genre == 'イタリアン'}">イタリアン</option>
+                <option value="ラーメン" th:selected="${searchForm.genre == 'ラーメン'}">ラーメン</option>
+                <option value="カフェ" th:selected="${searchForm.genre == 'カフェ'}">カフェ</option>
+            </select>
 
-        <button type="submit">検索</button>
-    </form>
-</div>
+            <label for="headcount">人数：</label>
+            <select name="headcount" id="headcount" th:value="${searchForm.headcount}">
+                <option value=""></option>
+                <option th:each="i : ${#numbers.sequence(1, 99)}"
+                        th:value="${i}"
+                        th:text="${i} + '名'"
+                        th:selected="${searchForm.headcount == i}">
+                </option>
+            </select>
 
-<!-- 検索結果が空の場合のメッセージ -->
-<div>
-    <P th:if="${#lists.isEmpty(results)}">検索条件に一致する店舗は見つかりませんでした。</P>
-</div>
+            <button type="submit">検索</button>
+        </form>
+    </div>
 
-<!-- 検索結果一覧 -->
-<div>
-    <table th:if="${not #lists.isEmpty(results)}">
-        <thead>
-        <tr>
-            <th></th>
-            <th>名前</th>
-            <th>エリア</th>
-            <th>ジャンル</th>
-            <th>定員</th>
-            <th>予算</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="restaurant : ${results}">
-            <td>
-                <img img th:src="${restaurant.mainImage} != null ? @{'/storage/restaurant/' + ${restaurant.mainImage}} : @{/storage/noimage.jpg}"
-                     class="w-100"
-                     alt="店舗画像">
-            </td>
-            <td>
-                <a th:href="@{/restaurant/{id}(id=${restaurant.id})}"
-                   th:text="${restaurant.name}">店舗名</a>
-            </td>
-            <td th:text="${restaurant.area}">エリア</td>
-            <td th:text="${restaurant.address}">ジャンル</td>
-            <td th:text="${restaurant.capacity}">定員</td>
-            <td th:text="${#numbers.formatInteger(restaurant.minAmount, 0, 'COMMA')} + '円～' + ${#numbers.formatInteger(restaurant.maxAmount, 0, 'COMMA')} + '円'">予算</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+    <!-- 検索結果が空の場合のメッセージ -->
+    <div>
+        <P th:if="${#lists.isEmpty(results)}">検索条件に一致する店舗は見つかりませんでした。</P>
+    </div>
 
-<!-- ページネーション -->
-<div th:if="${page.totalPages > 1}" class="pagination">
-    <ul>
+    <!-- 検索結果一覧 -->
+    <div>
+        <table th:if="${not #lists.isEmpty(results)}">
+            <thead>
+            <tr>
+                <th></th>
+                <th>名前</th>
+                <th>エリア</th>
+                <th>ジャンル</th>
+                <th>定員</th>
+                <th>予算</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="restaurant : ${results}">
+                <td>
+                    <img img th:src="${restaurant.mainImage} != null ? @{'/storage/restaurant/' + ${restaurant.mainImage}} : @{/storage/noimage.jpg}"
+                         class="w-100"
+                         alt="店舗画像">
+                </td>
+                <td>
+                    <a th:href="@{/restaurant/{id}(id=${restaurant.id}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}"
+                       th:text="${restaurant.name}">店舗名</a>
+                </td>
+                <td th:text="${restaurant.area}">エリア</td>
+                <td th:text="${restaurant.address}">ジャンル</td>
+                <td th:text="${restaurant.capacity}">定員</td>
+                <td th:text="${#numbers.formatInteger(restaurant.minAmount, 0, 'COMMA')} + '円～' + ${#numbers.formatInteger(restaurant.maxAmount, 0, 'COMMA')} + '円'">予算</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-        <!-- 「前の10件」※ 最初のページでは非表示 -->
-        <li th:if="${!page.first}">
-            <a th:href="@{/search(page=${page.number - 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">
-                « 前の10件
-            </a>
-        </li>
+    <!-- ページネーション -->
+    <div th:if="${page.totalPages > 1}" class="pagination">
+        <ul>
 
-        <!-- 最初のページ -->
-        <li th:if="${showFirst}">
-            <a th:href="@{/search(page=0, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">1</a>
-        </li>
+            <!-- 「前の10件」※ 最初のページでは非表示 -->
+            <li th:if="${!page.first}">
+                <a th:href="@{/search(page=${page.number - 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">
+                    « 前の10件
+                </a>
+            </li>
 
-        <!-- 「...」 -->
-        <li th:if="${showFirst}">
-            <span>...</span>
-        </li>
+            <!-- 最初のページ -->
+            <li th:if="${showFirst}">
+                <a th:href="@{/search(page=0, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">1</a>
+            </li>
 
-        <!-- 中央ページ番号 -->
-        <li th:each="i : ${#numbers.sequence(startPage, endPage)}"
-            th:classappend="${i == page.number} ? 'active'">
-            <a th:if="${i != page.number}"
-               th:href="@{/search(page=${i}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}"
-               th:text="${i + 1}">1</a>
-            <strong th:if="${i == page.number}" th:text="${i + 1}">1</strong>
-        </li>
+            <!-- 「...」 -->
+            <li th:if="${showFirst}">
+                <span>...</span>
+            </li>
 
-        <!-- 「...」 -->
-        <li th:if="${showLast}">
-            <span>...</span>
-        </li>
+            <!-- 中央ページ番号 -->
+            <li th:each="i : ${#numbers.sequence(startPage, endPage)}"
+                th:classappend="${i == page.number} ? 'active'">
+                <a th:if="${i != page.number}"
+                   th:href="@{/search(page=${i}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}"
+                   th:text="${i + 1}">1</a>
+                <strong th:if="${i == page.number}" th:text="${i + 1}">1</strong>
+            </li>
 
-        <!-- 最後のページ -->
-        <li th:if="${showLast}">
-            <a th:href="@{/search(page=${page.totalPages - 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}"
-               th:text="${page.totalPages}">最終</a>
-        </li>
+            <!-- 「...」 -->
+            <li th:if="${showLast}">
+                <span>...</span>
+            </li>
 
-        <!-- 「次の10件」※ 最後のページでは非表示 -->
-        <li th:if="${!page.last}">
-            <a th:href="@{/search(page=${page.number + 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">
-                次の10件 »
-            </a>
-        </li>
+            <!-- 最後のページ -->
+            <li th:if="${showLast}">
+                <a th:href="@{/search(page=${page.totalPages - 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}"
+                   th:text="${page.totalPages}">最終</a>
+            </li>
 
-    </ul>
-</div>
+            <!-- 「次の10件」※ 最後のページでは非表示 -->
+            <li th:if="${!page.last}">
+                <a th:href="@{/search(page=${page.number + 1}, area=${searchForm.area}, genre=${searchForm.genre}, headcount=${searchForm.headcount})}">
+                    次の10件 »
+                </a>
+            </li>
+
+        </ul>
+    </div>
+</main>
 
 <!-- webjar -->
 <script th:href="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
